AM_CFLAGS = -g -O0

AM_CPPFLAGS = -Wall -Werror

ACLOCAL_AMFLAGS = -I m4

#hardware_platform = $(MACHINE)
hardware_platform = i686-linux-gnu

lib_LTLIBRARIES = libhalcm.la
#bin_PROGRAMS =

libhalcm_ladir = $(includedir)/hal/$(MACHINE)/cm

libhalcm_la_CPPFLAGS = -I. $(CPPFLAGS)

libhalcm_la_SOURCES = -I. $(CPPFLAGS)

libhalcm_la_LIBADD = 
