AM_CFLAGS = -g -O0

AM_CPPFLAGS = -Wall -Werror

ACLOCAL_AMFLAGS = -I m4

#hardware_platform = $(MACHINE)
hardware_platform = i686-linux-gnu

lib_LTLIBRARIES = libhalmta.la
#bin_PROGRAMS =

libhalmta_ladir = $(includedir)/hal/$(MACHINE)/mta

libhalmta_la_CPPFLAGS = -I. $(CPPFLAGS)

libhalmta_la_SOURCES = -I. $(CPPFLAGS)

libhalmta_la_LIBADD = 
